--- a/ui2022/src/app/util/common-components/button/button.component.scss
+++ b/ui2022/src/app/util/common-components/button/button.component.scss
@@ -1,13 +1,7 @@
 button {
   font-family: 'Bull-mono';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding: 0.35rem 1rem;
+  font-size: 1rem;
   background: var(--dark-brown);
   border-radius: 45px;
   color: var(--background);
