--- a/ui2022/src/app/util/common-components/toolbar/toolbar.component.scss
+++ b/ui2022/src/app/util/common-components/toolbar/toolbar.component.scss
@@ -11,7 +11,7 @@ mat-toolbar {
   a {
     text-decoration: none;
     font-family: 'Bull-regular';
-    font-size: 18px;
+    font-size: 1.25rem;
   }
 
   .bordered {
